volexc/tests/ui/check_duplicate_message_index.out
Error: duplicate index 1 in message `Foo`
   ╭─[check_duplicate_message_index.vol:3:16]
   │
 3 │     bar: u32 = 1
   │                ┬  
   │                ╰── first used here
 4 │     baz: u64 = 1
   │                ┬  
   │                ╰── reused here
───╯