volexc/tests/ui/check_duplicate_message_index.vol
// Duplicate field index in message
message Foo {
    bar: u32 = 1
    baz: u64 = 1
}
